--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,6 +31,37 @@ a {
   border-bottom: 1px solid #bbb;
 }
 
+.author {
+  background: #d6d6d6;
+  border-radius: 6px;
+  color: #333;
+  display: inline-flex;
+  align-items: flex-end;
+  padding: 6px 12px 6px 6px;
+  margin-right: 24px;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    background: #dddddd;
+  }
+
+  img {
+    display: block;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+    border-radius: 4px;
+  }
+
+  span {
+    display: inline-block;
+    line-height: 1;
+    height: 100%;
+    font-size: 0.9875rem;
+  }
+}
+
 .post-title {
   padding-top: 0;
   padding-bottom: 0;
@@ -59,40 +90,19 @@ a {
       line-height: 1;
     }
   }
-
-  .author {
-    background: #d6d6d6;
-    border-radius: 6px;
-    color: #333;
-    display: flex;
-    align-items: flex-end;
-    padding: 6px 12px 6px 6px;
-    margin-right: 24px;
-    text-decoration: none;
-
-    &:hover,
-    &:focus {
-      background: #dddddd;
-    }
-
-    img {
-      display: block;
-      width: 18px;
-      height: 18px;
-      margin-right: 5px;
-      border-radius: 4px;
-    }
-
-    span {
-      display: inline-block;
-      line-height: 1;
-      height: 100%;
-      font-size: 0.9875rem;
-    }
-  }
 }
 
 @media screen and (max-width: 480px) {
+  .author {
+    img {
+      width: 14px;
+      height: 14px;
+    }
+    span {
+      font-size: 0.875rem;
+    }
+  }
+
   .post-title {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
@@ -100,15 +110,17 @@ a {
 
   .post-meta {
     margin: 15px 0 20px;
-  }
 
-  .post-meta .author img {
-    width: 16px;
-    height: 16px;
-  }
+    time {
+      span {
+        font-size: 0.875rem;
+      }
 
-  .post-meta .author span {
-    font-size: 0.875rem;
+      svg {
+        width: 14px;
+        height: 14px;
+      }
+    }
   }
 }
 
