--- a/content/_includes/partials/menu.njk
+++ b/content/_includes/partials/menu.njk
@@ -8,10 +8,10 @@
   <div class="pure-u-1 pure-u-md-1-2">
     <div class="pure-menu pure-menu-horizontal custom-menu-3 custom-can-transform">
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="/sites/" class="pure-menu-link">{{ phrases.sites }}</a></li>
-        <li class="pure-menu-item"><a href="/about/" class="pure-menu-link">{{ phrases.about }}</a></li>
-        <li class="pure-menu-item"><a href="/feed.xml" class="pure-menu-link">{{ phrases.rss }}</a></li>  
-        <li class="pure-menu-item"><span class="theme-switcher pure-menu-link">{{ phrases.toggleTheme }}</span></li>      
+        <li class="pure-menu-item"><a href="/sites/" class="pure-menu-link">{{ phrases.menu.sites }}</a></li>
+        <li class="pure-menu-item"><a href="/about/" class="pure-menu-link">{{ phrases.menu.about }}</a></li>
+        <li class="pure-menu-item"><a href="/feed.xml" class="pure-menu-link">{{ phrases.menu.rss }}</a></li>  
+        <li class="pure-menu-item"><span class="theme-switcher pure-menu-link">{{ phrases.menu.toggleTheme }}</span></li>      
       </ul>
     </div>
   </div>
