Add icon for JSON feeds

--- a/content/_includes/partials/bloglist-item.njk
+++ b/content/_includes/partials/bloglist-item.njk
@@ -6,6 +6,10 @@
     </a>
   </h2>
   <div class="rss">
-    {% include "svg/rss.svg" %} <a href="{{ site.data.feed }}">{{ phrases.rssFeed }}</a>
+    {% if site.data.feedType == 'json' %}
+      {% include "svg/json.svg" %} <a href="{{ site.data.feed }}">JSON Feed</a>
+    {% else %}
+      {% include "svg/rss.svg" %} <a href="{{ site.data.feed }}">RSS Feed</a>
+    {% endif %}
   </div>
 </li>
