--- a/content/_includes/partials/head.njk
+++ b/content/_includes/partials/head.njk
@@ -20,3 +20,6 @@
 <script src="{{ '/js/scripts.js' | addHash }}"></script>
 <meta name="generator" content="{{ siteConfig.generator.name }} v{{ siteConfig.generator.version }}">
 {% favicons 'assets/favicon.svg', appleIconBgColor='#000' %}
+{%- if siteConfig.enablePWA -%}
+<script>if ('serviceWorker' in navigator) navigator.serviceWorker.register('/service-worker.js');</script>
+{%- endif -%}
