Add skiplink + make theme toggle accessible via keyboard

--- a/content/_includes/layouts/base.njk
+++ b/content/_includes/layouts/base.njk
@@ -4,6 +4,7 @@
   {% include "partials/head.njk" %}
 </head>
 <body>
+  <a href="#main" id="skipToMain" class="skip-link">{{ phrases.skip_to_main_content }}</a>
   <header>
   {% include "partials/menu.njk" %}
   </header>
