--- a/content/_includes/partials/menu.njk
+++ b/content/_includes/partials/menu.njk
@@ -11,7 +11,7 @@
         <li class="pure-menu-item"><a href="/sites/" class="pure-menu-link">{{ phrases.menu.sites }}</a></li>
         <li class="pure-menu-item"><a href="/about/" class="pure-menu-link">{{ phrases.menu.about }}</a></li>
         <li class="pure-menu-item"><a href="/feed.xml" class="pure-menu-link">{{ phrases.menu.rss }}</a></li>  
-        <li class="pure-menu-item"><span class="theme-switcher pure-menu-link">{{ phrases.menu.toggleTheme }}</span></li>      
+        <li class="pure-menu-item"><span class="theme-switcher pure-menu-link" tabindex="0">{{ phrases.menu.toggleTheme }}</span></li>      
       </ul>
     </div>
   </div>
