--- a/content/_includes/layouts/base.njk
+++ b/content/_includes/layouts/base.njk
@@ -4,10 +4,11 @@
   {% include "partials/head.njk" %}
 </head>
 <body>
+  <a href="#main" id="skipToMain" class="skip-link">{{ phrases.skip_to_main_content }}</a>
   <header>
   {% include "partials/menu.njk" %}
   </header>
-  <main>
+  <main id="main">
     <div class="container">
       <div class="pure-g">
         <div class="pure-u-1-1">
