--- a/content/_includes/partials/bloglist-item.njk
+++ b/content/_includes/partials/bloglist-item.njk
@@ -1,4 +1,4 @@
-{% if site.data.hideFromBlogList != true %}
+{% if site.data.hideFromSiteList != true %}
 <li>
   <h2 class="blog-name">
     <img width="22" height="22" class="avatar" src="{{ site.data.avatar }}" alt="{{ site.data.name }}{{ phrases.sAvatar }}" />
