Add 'safe' attribute to post content

--- a/content/_includes/partials/post.njk
+++ b/content/_includes/partials/post.njk
@@ -19,9 +19,9 @@
 
   <p>
     {% if item.htmlDescription %}
-      {{ item.htmlDescription }}
+      {{ item.htmlDescription | safe }}
     {% elif item.description %}
-      {{ item.description }}
+      {{ item.description | safe }}
     {% endif %}
   </p>
 </article>
