--- a/content/utils/feed.xml.njk
+++ b/content/utils/feed.xml.njk
@@ -7,13 +7,13 @@ eleventyExcludeFromCollections: true
 <title>{{ siteConfig.title }}</title>
 <link href="{{ '/feed.xml' | alwaysProductionUrl }}" rel="self" />
 <link href="{{ '/' | alwaysProductionUrl }}" rel="alternate" />
-<updated>{{ collections.articles[0].published }}</updated>
+<updated>{{ articles[0].published }}</updated>
 <author>
   <name>{{ siteConfig.author }}</name>
   <uri>{{ '/' | alwaysProductionUrl }}</uri>
 </author>
 <id>{{ '/' | alwaysProductionUrl }}</id>
-{%- for item in collections.articles -%}
+{%- for item in articles -%}
 <entry>
 <title>{{ item.title }}</title>
 <link href="{{ item.link }}" />
