--- a/content/_includes/partials/post.njk
+++ b/content/_includes/partials/post.njk
@@ -2,7 +2,7 @@
   {% set title = item.title|safe %}
   {% set avatar = item.avatar %}
   {% set siteUrl = item.siteUrl %}
-  {% set siteName = item.siteName %}
+  {% set siteName = item.name %}
   {% set published = item.published|readableDate %}
   {% set description = item.description %}
   
@@ -12,7 +12,7 @@
     {% if avatar %}
       <img width="18" height="18" src="{{ avatar }}" alt="{{ siteName }}{{ phrases.sAvatar }}" />
     {% endif %}
-      <span>{{ authorName }}</span>
+      <span>{{ siteName }}</span>
     </a>
     {% endif %}
 
